--- a/examples/hello/backend/package.json
+++ b/examples/hello/backend/package.json
@@ -22,7 +22,7 @@
     "@temporalio/workflow": "^1.10.3",
     "dotenv": "^16.4.5",
     "openai": "^4.53.2",
-    "restack-sdk-ts": "/Users/aboutphilippe/Documents/dev/local-operator/sdk/typescript/dist",
+    "@restackio/restack-sdk-ts": "0.0.2",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.1"
   },
