--- a/examples/hello/trigger/package.json
+++ b/examples/hello/trigger/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "restack-sdk-ts": "/Users/aboutphilippe/Documents/dev/local-operator/sdk/typescript/dist"
+    "@restackio/restack-sdk-ts": "0.0.2"
   },
   "devDependencies": {
     "ts-node": "^10.9.2"
