--- a/examples/wip-local-streaming/backend/package.json
+++ b/examples/wip-local-streaming/backend/package.json
@@ -22,7 +22,7 @@
     "@temporalio/workflow": "^1.10.3",
     "dotenv": "^16.4.5",
     "openai": "^4.53.2",
-    "@restackio/restack-sdk-ts": "0.0.2"
+    "restack-sdk-ts-local": "/Users/aboutphilippe/Documents/dev/local-operator/sdk/typescript/dist"
   },
   "devDependencies": {
     "@types/node": "^20.11.1",
