--- a/examples/wip-local-streaming/trigger/package.json
+++ b/examples/wip-local-streaming/trigger/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "restack-sdk-ts": "/Users/aboutphilippe/Documents/dev/local-operator/sdk/typescript/dist"
+    "restack-sdk-ts-local": "/Users/aboutphilippe/Documents/dev/local-operator/sdk/typescript/dist"
   },
   "devDependencies": {
     "ts-node": "^10.9.2"
