--- a/examples/twilio/package.json
+++ b/examples/twilio/package.json
@@ -13,23 +13,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@deepgram/sdk": "^3.5.0",
+    "@deepgram/sdk": "^3.5.1",
     "@restackio/restack-sdk-ts": "^0.0.33",
-    "@temporalio/workflow": "^1.10.3",
+    "@temporalio/workflow": "1.10.3",
     "axios": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "openai": "^4.54.0",
+    "openai": "^4.55.4",
     "twilio": "^5.2.2",
     "typescript": "^5.5.4",
     "uuid": "^10.0.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.2.0",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
     "nodemon": "^3.1.4",
