--- a/examples/hello/package.json
+++ b/examples/hello/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start.watch": "nodemon src/pods.ts",
+    "start.watch": "nodemon src/worker.ts",
     "dev": "pnpm start.watch",
     "workflow": "ts-node ./scheduleWorkflow.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,7 +23,7 @@
     "@temporalio/workflow": "^1.10.3",
     "dotenv": "^16.4.5",
     "openai": "^4.53.2",
-    "@restackio/restack-sdk-ts": "^0.0.34",
+    "@restackio/restack-sdk-ts": "^0.0.39",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.1"
   },
