--- a/examples/voice/package.json
+++ b/examples/voice/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev-server": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "dev-pods": "ts-node-dev --respawn --transpile-only src/pods.ts",
+    "dev-worker": "ts-node-dev --respawn --transpile-only src/worker.ts",
     "call": "ts-node ./callWorkflow.ts",
     "ngrok": "ngrok http 4000"
   },
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@deepgram/sdk": "^3.5.1",
-    "@restackio/restack-sdk-ts": "^0.0.34",
+    "@restackio/restack-sdk-ts": "^0.0.39",
     "@temporalio/workflow": "1.10.3",
     "axios": "^1.7.3",
     "cors": "^2.8.5",
