--- a/examples/hello/package.json
+++ b/examples/hello/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start.watch": "nodemon src/worker.ts",
+    "start.watch": "nodemon src/operator.ts",
     "dev": "pnpm start.watch",
     "workflow": "ts-node ./scheduleWorkflow.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,13 +19,12 @@
     ]
   },
   "dependencies": {
-    "@temporalio/worker": "^1.10.3",
-    "@temporalio/workflow": "^1.10.3",
+    "@restackio/integrations-openai": "^0.0.1",
+    "@restackio/restack-sdk-ts": "^0.0.48",
+    "@temporalio/workflow": "^1.11.1",
     "dotenv": "^16.4.5",
-    "openai": "^4.53.2",
-    "@restackio/restack-sdk-ts": "^0.0.39",
     "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.1"
+    "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.1",
