--- a/examples/hello/tsconfig.json
+++ b/examples/hello/tsconfig.json
@@ -9,6 +9,6 @@
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts", "src/server"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
