--- a/examples/voice/package.json
+++ b/examples/voice/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev-server": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "dev-worker": "ts-node-dev --respawn --transpile-only src/worker.ts",
+    "dev-op": "ts-node-dev --respawn --transpile-only src/operator.ts",
+    "clean": "rm -rf node_modules",
     "call": "ts-node ./callWorkflow.ts",
     "ngrok": "ngrok http 4000"
   },
@@ -14,13 +15,17 @@
   "license": "ISC",
   "dependencies": {
     "@deepgram/sdk": "^3.5.1",
-    "@restackio/restack-sdk-ts": "^0.0.39",
-    "@temporalio/workflow": "1.10.3",
-    "axios": "^1.7.3",
+    "@restackio/integrations-deepgram": "^0.0.5",
+    "@restackio/integrations-openai": "^0.0.11",
+    "@restackio/integrations-twilio": "^0.0.1",
+    "@restackio/integrations-websocket": "^0.0.6",
+    "@restackio/restack-sdk-ts": "^0.0.53",
+    "@temporalio/workflow": "1.11.1",
+    "axios": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "openai": "^4.55.4",
+    "openai": "^4.56.0",
     "twilio": "^5.2.2",
     "typescript": "^5.5.4",
     "uuid": "^10.0.0",
@@ -30,7 +35,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^22.2.0",
+    "@types/node": "^22.4.1",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
     "nodemon": "^3.1.4",
