hello bump integrations

--- a/examples/hello/package.json
+++ b/examples/hello/package.json
@@ -7,7 +7,7 @@
     "start.watch": "nodemon src/operator.ts",
     "dev": "pnpm start.watch",
     "clean": "rm -rf node_modules",
-    "workflow": "ts-node ./scheduleWorkflow.ts",
+    "workflow": "ts-node ./scheduleWorkflow.ts"
   },
   "nodemonConfig": {
     "execMap": {
@@ -19,7 +19,7 @@
     ]
   },
   "dependencies": {
-    "@restackio/integrations-openai": "^0.0.2",
+    "@restackio/integrations-openai": "^0.0.12",
     "@restackio/restack-sdk-ts": "^0.0.53",
     "@temporalio/workflow": "^1.11.1",
     "dotenv": "^16.4.5",
