--- a/examples/voice/package.json
+++ b/examples/voice/package.json
@@ -24,6 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "openai": "^4.56.0",
+    "twilio": "^5.2.2",
     "typescript": "^5.5.4",
     "uuid": "^10.0.0",
     "ws": "^8.18.0",
