connect services to cloud client

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   app:
-    container_name: restack-backend
+    container_name: restack-engine
     image: ghcr.io/restackio/local-operator:main
     ports:
       - "5233:5233"
