--- a/examples/posthog/package.json
+++ b/examples/posthog/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/operator.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/services.ts",
     "clean": "rm -rf node_modules",
     "workflow": "ts-node ./scheduleWorkflow.ts"
   },
@@ -12,17 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@restackio/integrations-openai": "^0.0.15",
-    "@restackio/restack-sdk-ts": "^0.0.53",
+    "@restackio/integrations-openai": "^0.0.18",
+    "@restackio/restack-sdk-ts": "^0.0.57",
     "@temporalio/workflow": "1.11.1",
     "dotenv": "^16.4.5",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.2"
+    "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
-    "@types/node": "^22.4.1",
+    "@types/node": "^22.5.4",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
