--- a/examples/voice/package.json
+++ b/examples/voice/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev-server": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "dev-op": "ts-node-dev --respawn --transpile-only src/operator.ts",
+    "dev-services": "ts-node-dev --respawn --transpile-only src/services.ts",
     "clean": "rm -rf node_modules",
     "call": "ts-node ./callWorkflow.ts",
     "ngrok": "ngrok http 4000"
@@ -14,19 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@deepgram/sdk": "^3.5.1",
-    "@restackio/integrations-deepgram": "^0.0.5",
-    "@restackio/integrations-openai": "^0.0.12",
-    "@restackio/integrations-twilio": "^0.0.2",
-    "@restackio/integrations-websocket": "^0.0.6",
-    "@restackio/restack-sdk-ts": "^0.0.53",
+    "@deepgram/sdk": "^3.6.0",
+    "@restackio/integrations-deepgram": "^0.0.7",
+    "@restackio/integrations-openai": "^0.0.18",
+    "@restackio/integrations-twilio": "^0.0.4",
+    "@restackio/integrations-websocket": "^0.0.11",
+    "@restackio/restack-sdk-ts": "^0.0.58",
     "@temporalio/workflow": "1.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "openai": "^4.56.0",
-    "twilio": "^5.2.2",
-    "typescript": "^5.5.4",
+    "express": "^4.21.0",
+    "openai": "^4.59.0",
+    "twilio": "^5.3.0",
+    "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^22.4.1",
+    "@types/node": "^22.5.4",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
     "nodemon": "^3.1.4",
