--- a/examples/voice/package.json
+++ b/examples/voice/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start-server": "ts-node src/server.ts",
     "start-services": "ts-node src/services.ts",
     "dev-server": "ts-node-dev --respawn --transpile-only src/server.ts",
     "dev-services": "ts-node-dev --respawn --transpile-only src/services.ts",
@@ -32,7 +33,8 @@
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "ws": "^8.18.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -41,8 +43,8 @@
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
     "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "@restackio/restack-sdk-cloud-ts": "^1.0.5"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
