--- a/examples/hello/.env.example
+++ b/examples/hello/.env.example
@@ -1,1 +1,9 @@
 OPENAI_API_KEY=
+
+# Restack
+
+RESTACK_ENGINE_ENV_ID=
+RESTACK_ENGINE_ENV_ADDRESS=
+RESTACK_ENGINE_ENV_API_KEY=
+
+RESTACK_CLOUD_TOKEN=
