--- a/examples/posthog/.env.example
+++ b/examples/posthog/.env.example
@@ -2,3 +2,11 @@ POSTHOG_API_KEY=
 POSTHOG_PROJECT_ID=
 POSTHOG_HOST=https://us.posthog.com
 OPENAI_API_KEY=
+
+# Restack
+
+RESTACK_ENGINE_ENV_ID=
+RESTACK_ENGINE_ENV_ADDRESS=
+RESTACK_ENGINE_ENV_API_KEY=
+
+RESTACK_CLOUD_TOKEN=
