--- a/examples/voice/.env.example
+++ b/examples/voice/.env.example
@@ -13,3 +13,10 @@ YOUR_NUMBER=
 
 # Ngrok
 SERVER_HOST=5756-5-61-150-161.ngrok-free.app
+
+# Restack
+RESTACK_ENGINE_ENV_ID=
+RESTACK_ENGINE_ENV_ADDRESS=
+RESTACK_ENGINE_ENV_API_KEY=
+
+RESTACK_CLOUD_TOKEN=
