--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf node_modules"
   },
   "dependencies": {
-    "@restackio/restack-sdk-ts": "^0.0.63",
+    "@restackio/restack-sdk-ts": "^0.0.66",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
