--- a/examples/posthog/.env.example
+++ b/examples/posthog/.env.example
@@ -5,8 +5,8 @@ OPENAI_API_KEY=
 
 # Restack
 
-RESTACK_ENGINE_ENV_ID=
-RESTACK_ENGINE_ENV_ADDRESS=
-RESTACK_ENGINE_ENV_API_KEY=
+RESTACK_ENGINE_ID=
+RESTACK_ENGINE_ADDRESS=
+RESTACK_ENGINE_API_KEY=
 
 RESTACK_CLOUD_TOKEN=
