--- a/examples/voice/.env.example
+++ b/examples/voice/.env.example
@@ -15,8 +15,8 @@ YOUR_NUMBER=
 SERVER_HOST=5756-5-61-150-161.ngrok-free.app
 
 # Restack
-RESTACK_ENGINE_ENV_ID=
-RESTACK_ENGINE_ENV_ADDRESS=
-RESTACK_ENGINE_ENV_API_KEY=
+RESTACK_ENGINE_ID=
+RESTACK_ENGINE_ADDRESS=
+RESTACK_ENGINE_API_KEY=
 
 RESTACK_CLOUD_TOKEN=
