--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "service": "ts-node src/services.ts",
-        "trigger": "ts-node ./triggerWorkflow.ts",
+        "schedule": "ts-node ./scheduleWorkflow.ts",
         "start.watch": "nodemon --exec ts-node --esm src/services.ts",
         "build": "tsc --build",
         "clean": "rm -rf node_modules"
