--- a/examples/hello/package.json
+++ b/examples/hello/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@restackio/integrations-openai": "^0.0.23",
-    "@restackio/restack-sdk-ts": "^0.0.66",
+    "@restackio/ai": "^0.0.75",
     "@temporalio/workflow": "^1.11.2",
     "dotenv": "^16.4.5",
     "zod": "^3.23.8",
