--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -17,7 +17,7 @@
         ]
     },
     "dependencies": {
-        "@restackio/restack-sdk-ts": "^0.0.73",
+        "@restackio/ai": "^0.0.75",
         "@temporalio/workflow": "^1.11.2"
     },
     "devDependencies": {
