--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf node_modules"
   },
   "dependencies": {
-    "@restackio/restack-sdk-ts": "^0.0.66",
+    "@restackio/ai": "^0.0.75",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
