--- a/examples/posthog/package.json
+++ b/examples/posthog/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@restackio/integrations-linear": "^0.0.3",
     "@restackio/integrations-openai": "^0.0.23",
-    "@restackio/restack-sdk-ts": "^0.0.72",
+    "@restackio/ai": "^0.0.75",
     "@temporalio/workflow": "1.11.1",
     "dotenv": "^16.4.5",
     "typescript": "^5.6.2",
