--- a/examples/voice/package.json
+++ b/examples/voice/package.json
@@ -22,7 +22,7 @@
     "@restackio/integrations-openai": "^0.0.3",
     "@restackio/integrations-twilio": "^0.0.5",
     "@restackio/integrations-websocket": "^0.0.12",
-    "@restackio/restack-sdk-ts": "^0.0.66",
+    "@restackio/ai": "^0.0.75",
     "@temporalio/workflow": "1.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
