Fix docker image name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 name: restack-engine
 services:
   studio:
-    image: ghcr.io/restackio/local-operator:main
+    image: ghcr.io/restackio/engine:main
     ports:
       - "5233:5233"
       - "6233:6233"
