--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,9 +25,10 @@ jobs:
         with:
           node-version: 20
       
-      # Only install dev dependencies, for the binary. No need for source code.
+      # Only install dev dependencies, for the binary. No need to install deps for the source code.
       - name: Install dependencies
-        run: pnpm install --dev
+        # Weird tsup quirck https://github.com/npm/cli/issues/4828#issuecomment-2404560937
+        run: pnpm i @rollup/rollup-linux-x64-gnu && pnpm install --dev
         working-directory: ./examples/get-started
       
       - name: Build binary
