--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,7 +27,7 @@ jobs:
       
       # Only install dev dependencies, for the binary. No need to install deps for the source code.
       - name: Install dependencies
-        # Weird tsup quirck https://github.com/npm/cli/issues/4828#issuecomment-2404560937
+        # Weird tsup quirk https://github.com/npm/cli/issues/4828#issuecomment-2404560937
         run: pnpm i @rollup/rollup-linux-x64-gnu && pnpm install --dev
         working-directory: ./examples/get-started
       
