--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -36,7 +36,7 @@ jobs:
         working-directory: ./examples/get-started
       
       - name: Publish to npm
-        run: npm publish --access public
+        run: pnpm publish --access public
         working-directory: ./examples/get-started
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
