--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@restackio/get-started",
-    "version": "1.0.5",
+    "version": "1.0.8",
     "description": "Get started with Restack AI SDK",
     "bin": {
         "get-started": "bin/get-started.mjs"
@@ -23,7 +23,6 @@
         "@temporalio/workflow": "^1.11.2",
         "nodemon": "^2.0.22",
         "ts-node": "^10.9.2",
-        "typescript": "^5.6.2",
         "wait-on": "^8.0.1"
     },
     "scripts": {
@@ -33,6 +32,13 @@
     },
     "devDependencies": {
         "@clack/prompts": "^0.7.0",
-        "tsup": "8.3.0"
+        "tsup": "8.3.0",
+        "typescript": "5.6.2"
+    },
+    "pnpm": {
+        "overrides": {
+            "rollup": "npm:@rollup/wasm-node"
+        }
     }
+    
 }
