example openai pnpm commands unify

--- a/examples/openai/package.json
+++ b/examples/openai/package.json
@@ -9,7 +9,7 @@
     "dev": "pnpm start.watch",
     "build": "tsc --build",
     "clean": "rm -rf node_modules",
-    "workflow": "ts-node ./scheduleWorkflow.ts",
+    "schedule": "ts-node ./scheduleWorkflow.ts",
     "restack-up": "node restack_up.mjs"
   },
   "nodemonConfig": {
