--- a/examples/posthog/package.json
+++ b/examples/posthog/package.json
@@ -8,16 +8,16 @@
     "dev": "ts-node-dev --respawn --transpile-only src/services.ts",
     "build": "tsc --build",
     "clean": "rm -rf node_modules",
-    "workflow": "ts-node ./scheduleWorkflow.ts",
+    "schedule": "ts-node ./scheduleWorkflow.ts",
     "restack-up": "node restack_up.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@restackio/integrations-linear": "^0.0.3",
-    "@restackio/integrations-openai": "^0.0.23",
-    "@restackio/ai": "^0.0.75",
+    "@restackio/integrations-linear": "^0.0.6",
+    "@restackio/integrations-openai": "^0.0.29",
+    "@restackio/ai": "^0.0.80",
     "@temporalio/workflow": "1.11.1",
     "dotenv": "^16.4.5",
     "typescript": "^5.6.2",
