Update package.json and tsconfig.json in get-started example
- Added "@types/node" as a devDependency in package.json
- Added "clean" script to remove node_modules in package.json
- Updated tsconfig.json to include "noImplicitAny" and "sourceMap" options

--- a/examples/get-started/package.json
+++ b/examples/get-started/package.json
@@ -29,10 +29,12 @@
         "dev": "nodemon src/services.ts",
         "build-bin": "pnpm tsup --outDir bin --format esm bin/get-started.ts",
         "service": "ts-node src/services.ts",
-        "schedule": "ts-node scheduleWorkflow.ts"
+        "schedule": "ts-node scheduleWorkflow.ts",
+        "clean": "rm -rf node_modules"
     },
     "devDependencies": {
         "@clack/prompts": "^0.7.0",
+        "@types/node": "^22.8.1",
         "tsup": "8.3.0",
         "typescript": "5.6.2"
     },
