--- a/examples/voice/package.json
+++ b/examples/voice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restack-voice",
+  "name": "restack-examples-ts-voice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
