comment env variables in posthog example
Former-commit-id: c7879023ba1856f735bc487c37575c2c1d8b9171
Former-commit-id: c47e770aa63606aa5e9e659d13e2b72166b7f2c9

--- a/examples/posthog/.env.example
+++ b/examples/posthog/.env.example
@@ -1,9 +1,11 @@
+# Local & Cloud - You need to set these for the example to work
+
 POSTHOG_API_KEY=
 POSTHOG_PROJECT_ID=
 POSTHOG_HOST=https://us.posthog.com
 OPENAI_API_KEY=
 
-# Restack
+# (Optional) Restack Cloud - You only need to set these if you are using Restack Cloud
 
 RESTACK_ENGINE_ID=
 RESTACK_ENGINE_ADDRESS=
