--- a/examples/get-started/.env.example
+++ b/examples/get-started/.env.example
@@ -1,8 +1,9 @@
-# Restack Engine
+OPENAI_API_KEY=
+
+# Deploy on Restack Cloud
 
 RESTACK_ENGINE_ID=
 RESTACK_ENGINE_ADDRESS=
 RESTACK_ENGINE_API_KEY=
 
-# Restack Cloud
 RESTACK_CLOUD_TOKEN=
