--- a/examples/gotohuman/package.json
+++ b/examples/gotohuman/package.json
@@ -24,11 +24,11 @@
   },
   "dependencies": {
     "@restackio/ai": "^0.0.81",
-    "@restackio/integrations-openai": "^0.0.33",
     "@temporalio/workflow": "^1.11.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "gotohuman": "0.2.3",
+    "openai": "^4.71.1",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3"
   },
