--- a/examples/gotohuman/package.json
+++ b/examples/gotohuman/package.json
@@ -27,7 +27,7 @@
     "@temporalio/workflow": "^1.11.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "gotohuman": "0.2.3",
+    "gotohuman": "~0.2.4",
     "openai": "^4.71.1",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3"
