--- a/examples/swagger/package.json
+++ b/examples/swagger/package.json
@@ -34,7 +34,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@restackio/restack-sdk-cloud-ts": "^1.0.16",
+    "@restackio/cloud": "^1.0.18",
     "@types/express": "^5.0.0",
     "@types/node": "^20.16.9",
     "@types/swagger-jsdoc": "^6.0.4",
