--- a/examples/encryption/package.json
+++ b/examples/encryption/package.json
@@ -33,7 +33,7 @@
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
-    "@restackio/restack-sdk-cloud-ts": "^1.0.15",
+    "@restackio/cloud": "^1.0.18",
     "@types/node": "^20.16.9",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.2"
