--- a/examples/nextjs-together-llamaindex/backend/package.json
+++ b/examples/nextjs-together-llamaindex/backend/package.json
@@ -22,7 +22,7 @@
     "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
-    "@restackio/restack-sdk-cloud-ts": "^1.0.16",
+    "@restackio/cloud": "^1.0.18",
     "@types/express": "^5.0.0",
     "@types/node": "^20.16.9",
     "ts-node": "^10.9.2",
