--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@restackio/ai": "^0.0.82",
+    "dotenv": "^16.4.5",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@restackio/cloud": "^1.0.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
