--- a/examples/openai/package.json
+++ b/examples/openai/package.json
@@ -24,13 +24,13 @@
   "dependencies": {
     "@restackio/ai": "^0.0.82",
     "@temporalio/workflow": "^1.11.2",
-    "openai": "^4.71.1",
     "dotenv": "^16.4.5",
+    "openai": "^4.71.1",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
-    "@restackio/restack-sdk-cloud-ts": "^1.0.15",
+    "@restackio/cloud": "^1.0.18",
     "@types/node": "^20.16.9",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.2"
