--- a/examples/posthog/package.json
+++ b/examples/posthog/package.json
@@ -15,9 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@restackio/ai": "^0.0.82",
     "@restackio/integrations-linear": "^0.0.8",
     "@restackio/integrations-openai": "^0.0.34",
-    "@restackio/ai": "^0.0.82",
     "@temporalio/workflow": "1.11.1",
     "dotenv": "^16.4.5",
     "typescript": "^5.6.2",
@@ -26,7 +26,7 @@
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
-    "@restackio/restack-sdk-cloud-ts": "^1.0.5",
+    "@restackio/cloud": "^1.0.18",
     "@types/node": "^22.5.5",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
