--- a/examples/voice/package.json
+++ b/examples/voice/package.json
@@ -18,32 +18,32 @@
   "license": "ISC",
   "dependencies": {
     "@deepgram/sdk": "^3.6.0",
+    "@restackio/ai": "^0.0.82",
     "@restackio/integrations-deepgram": "^0.0.13",
     "@restackio/integrations-openai": "^0.0.34",
     "@restackio/integrations-twilio": "^0.0.10",
     "@restackio/integrations-websocket": "^0.0.17",
-    "@restackio/ai": "^0.0.82",
     "@temporalio/workflow": "1.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "openai": "^4.59.0",
+    "ts-node": "^10.9.2",
     "twilio": "^5.3.0",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "ws": "^8.18.0",
-    "zod": "^3.23.8",
-    "ts-node": "^10.9.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@restackio/cloud": "^1.0.18",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
     "nodemon": "^3.1.4",
-    "ts-node-dev": "^2.0.0",
-    "@restackio/restack-sdk-cloud-ts": "^1.0.5"
+    "ts-node-dev": "^2.0.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
