--- a/voice/package.json
+++ b/voice/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@deepgram/sdk": "3.6.0",
     "@restackio/ai": "0.0.90",
     "@temporalio/workflow": "1.11.5",
     "cors": "2.8.5",
@@ -30,23 +31,21 @@
     "openai": "4.59.0",
     "ts-node": "10.9.2",
     "twilio": "5.3.0",
-    "@deepgram/sdk": "3.6.0",
     "typescript": "5.6.2",
     "uuid": "10.0.0",
     "ws": "8.18.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@restackio/cloud": "1.0.23",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/node": "22.5.4",
     "@types/uuid": "10.0.0",
     "@types/ws": "8.5.12",
+    "dotenv-cli": "7.4.4",
     "nodemon": "3.1.4",
     "ts-node-dev": "2.0.0",
-    "tsx": "4.19.2",
-    "dotenv-cli": "7.4.4"
+    "tsx": "4.19.2"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.8"
