--- a/openai/package.json
+++ b/openai/package.json
@@ -9,8 +9,7 @@
     "dev": "npm run start.watch",
     "build": "tsc --build",
     "clean": "rm -rf node_modules",
-    "schedule": "ts-node ./scheduleWorkflow.ts",
-    "restack-up": "node up.mjs"
+    "schedule": "ts-node ./scheduleWorkflow.ts"
   },
   "nodemonConfig": {
     "execMap": {
@@ -30,7 +29,6 @@
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
-    "@restackio/cloud": "^1.0.24",
     "@types/node": "^20.16.9",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.2"
