--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@restackio/ai": "^0.0.97",
-    "@temporalio/workflow": "1.11.3"
+    "@temporalio/workflow": "1.11.3",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@types/node": "20.16.9",
@@ -18,6 +19,6 @@
     "open-cli": "^8.0.0",
     "prettier": "3.3.3",
     "tsx": "4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   }
 }
