--- a/quickstart/Dockerfile
+++ b/quickstart/Dockerfile
@@ -3,9 +3,6 @@ FROM node:20-bullseye AS builder
 
 WORKDIR /app
 
-# Install pnpm
-RUN npm install -g pnpm
-
 # Copy package files and env file if it exists
 COPY package*.json .env* ./
 
@@ -13,29 +10,14 @@ COPY package*.json .env* ./
 COPY package*.json ./
 
 # Install dependencies including TypeScript
-RUN pnpm install
-RUN pnpm add -D typescript
+RUN npm install
+RUN npm add -D typescript
 
 # Copy source code
 COPY . .
 
 # Build TypeScript code
-RUN pnpm run build
-
-# Production stage
-FROM node:20-bullseye
-
-WORKDIR /app
-
-# Install pnpm
-RUN npm install -g pnpm
-
-# Copy package files and built code
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/dist ./dist
-
-# Install production dependencies only
-RUN pnpm install --prod
+RUN npm run build
 
 # Define environment variables
 ARG RESTACK_ENGINE_ID
